--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -37,6 +37,13 @@
             <version>1.1.1</version>
         </dependency>
 
+        <!-- mssql jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre8</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
