Cambios grandes a la búsqueda en la página principal.

--- a/WebApp/config.json
+++ b/WebApp/config.json
@@ -9,6 +9,6 @@
     "IP": "10.0.0.43",
     "Database": "VentaVehiculos",
     "User": "VehiculoWebApp",
-    "Pass": "jy=ZzmPe4kAJd^su"
+    "Pass": "zP&hK*!4Mu5JMj#Wv^*.y+c-S6qXg.k]"
   }
 }
