Pila de trabajo realizado en la WebApp

--- a/PyWebApp/config.json
+++ b/PyWebApp/config.json
@@ -1,6 +1,7 @@
 {
   "Empresa": {
     "Nombre": "Generic",
+    "Descripcion": "Descripción generica sobre la empresa Generic.",
     "Contacto": {
 
     }
