--- a/PyWebApp/config.json
+++ b/PyWebApp/config.json
@@ -1,7 +1,7 @@
 {
   "Empresa": {
-    "Nombre": "Generic",
-    "Descripcion": "Descripción generica sobre la empresa Generic.",
+    "Nombre": "Carros Buenos",
+    "Descripcion": "Aquí encontraras buenos carros ofrecidos por diferentes entidades.",
     "Contacto": {
 
     }
